# Six917-ST7796-LCD

./: .gitignore  .projectlinkstore  app.c  app.h  readme.md  sl_ST7796_display.pintool  sl_ST7796_display.slcp  sl_ST7796_display.slpb  sl_ST7796_display.slps  vscode.conf
.uceditor/: .sl_si91x_gpio_detailed_example.%extension-third_party_hw_drivers%tft_lcd_st7789_dma.cedit  .sl_si91x_gpio_detailed_example.%extension-wiseconnect3_sdk%sl_gspi.cedit
autogen/: gen.properties  sl_component_catalog.h  sl_event_handler.c
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
cmake_gcc/: CMakeLists.txt  CMakePresets.json  sl_ST7796_display.cmake  sl_ST7796_display_project.cmake
config/: lv_conf.h  pin_config.h  sl_si91x_gspi_common_config.h
vendors/lvgl/src/extra/libs/: lv_libs.h
vendors/lvgl/src/misc/: lv_tlsf.c
vendors/services_mipi_dbi/inc/: mipi_dbi.h
vendors/services_mipi_dbi/src/: mipi_dbi_spi_dma_gecko.c  mipi_dbi_spi_gecko.c  mipi_dbi_spi_si91x.c
